how-to-learn 3.0

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
         <section>
           <div class="digits">
-
             <h1 class="section-title">Цифры и факты</h1>
             <h2 class="section-subtitle"> Про учебу и мозг</h2>
 
@@ -96,7 +95,6 @@
 
         <section>
           <div class="kaufman">
-
             <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
             <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
 
@@ -151,9 +149,8 @@
                 <h3 class="table__heading table__heading_theme_dark">10</h3>
                 <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
               </div>
-
             </div>
-            <div class="kaufman__triangle" alt=""></div>
+            <div class="kaufman__triangle"></div>
           </div>
         </section>
 
@@ -167,32 +164,38 @@
             <h3 class="footer__author">© Виктор Абанькин</h3>
           </div>
 
-          <div class="footer__column footer__column_content_info">
+          <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
-            <div class="footer__column-links">
-              <a class="footer__column-link">Главная</a>
-              <a class="footer__column-link">Концепция</a>
-              <a class="footer__column-link">Наставники</a>
-            </div>
-          </div>
+              <ul class="footer__column-links">
+                <li><a class="footer__column-link" href="">Главная</a></li>
+                <li><a class="footer__column-link" href="">Концепция</a></li>
+                <li><a class="footer__column-link" href="">Наставники</a></li>
+              </ul>
+          </nav>
 
-          <div class="footer__column footer__column_content_social">
+          <nav class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
-            <div class="footer__column-links">
-              <a class="footer__column-link">
-                <img class="footer__social-icon" src="/images/facebook_color_white.svg">
-                Facebook
-              </a>
-              <a class="footer__column-link">
-                <img class="footer__social-icon" src="/images/vk_color_white.svg">
-                Вконтакте
-              </a>
-              <a class="footer__column-link">
-                <img class="footer__social-icon" src="/images/instagram_color_white.svg">
-                Instagram
-              </a>
-            </div>
-          </div>
+              <ul class="footer__column-links">
+                <li>
+                  <a class="footer__column-link" href="">
+                    <img class="footer__social-icon" src="/images/facebook_color_white.svg" alt="">
+                    Facebook
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__column-link" href="">
+                    <img class="footer__social-icon" src="/images/vk_color_white.svg" alt="">
+                      Вконтакте
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__column-link" href="">
+                    <img class="footer__social-icon" src="/images/instagram_color_white.svg" alt="">
+                      Instagram
+                  </a>
+                </li>
+              </ul>
+          </nav>
         </div>
 
       </footer>
