how-to-learn WIP 3.1 small changes

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <h3 class="table__heading">1889 год</h3>
                 <p class="table__text">Открытие условного рефлекса</p>
               </div>
+            </div>
           </div>
         </section>
 
