file ways fixed in HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
           Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
           <a href="#" class="header__link">Узнать →</a>
         </p>
-        <img src="/images/header-image.png" alt="" class="header__main-illustration">
+        <img src="./images/header-image.png" alt="" class="header__main-illustration">
         <div class="header__square-pic"></div>
       </header>
 
@@ -179,19 +179,19 @@
               <ul class="footer__column-links">
                 <li>
                   <a class="footer__column-link" href="">
-                    <img class="footer__social-icon" src="/images/facebook_color_white.svg" alt="">
+                    <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="">
                     Facebook
                   </a>
                 </li>
                 <li>
                   <a class="footer__column-link" href="">
-                    <img class="footer__social-icon" src="/images/vk_color_white.svg" alt="">
+                    <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="">
                       Вконтакте
                   </a>
                 </li>
                 <li>
                   <a class="footer__column-link" href="">
-                    <img class="footer__social-icon" src="/images/instagram_color_white.svg" alt="">
+                    <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="">
                       Instagram
                   </a>
                 </li>
