--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./vendor/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <!--<link rel="stylesheet" href="./pages/index.css"> -->
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -102,12 +101,12 @@
 
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe id="ytplayer" width="515" height="316"
-              src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+            <iframe id="ytplayer" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+              allowfullscreen></iframe>
           </div>
           <div class="video__iframe">
-            <iframe id="ytplayer-2" width="515" height="316"
-              src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+            <iframe id="ytplayer-2" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+              allowfullscreen></iframe>
           </div>
         </div>
 
